--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<iframe width="560" height="315" src="https://musiclab.chromeexperiments.com/Song-Maker/embed/4859353234669568" frameborder="0" allowfullscreen></iframe>
+<title>
+    programming
+    </title>
+    <h1>
+    Programming
+    </h1>
+    <article>
+    is whats inside everything in a computer,
+    </article>
+<a href="https://github.com"> github </a>
+<article>is a easy way to use programming to make things</article>
+<p>
+by the way this is just a simple guide
+</p>
