--- a/Cat.html
+++ b/Cat.html
@@ -1,5 +1,3 @@
-<py-script>
-import turtle
-diavice = turtle.Turtle()
-diavice.color("magenta")
-</py-script>
+<%import turtle%>
+<%diavice = turtle.Turtle()%>
+<%diavice.color("magenta")%>
