--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
 by the way this is just a simple guide
 </p>
 <p>
-the first place to go is
+is the first place to go is
 </p>
+<><a href="https://scratch.mit.edu">scratch</a></button>
