--- a/index.html
+++ b/index.html
@@ -15,4 +15,4 @@ by the way this is just a simple guide
 <p>
 is the first place to go is
 </p>
-<><a href="https://scratch.mit.edu">scratch</a></button>
+<button><a href="https://scratch.mit.edu">scratch</a></button>
