--- a/Python.html
+++ b/Python.html
@@ -1,4 +1,4 @@
 <%import turtle%>
 <%diavice = turtle.Turtle()%>
 <%diavice.color("magenta")%>
-<%diavice.write("welcome to python")%>
+<%diavicediavice.write("welcome to python")%>
