--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 by the way this is just a simple guide
 </p>
 <p>
-is the first place to go is
+the first place to go is
 </p>
 <button><a href="https://scratch.mit.edu"></a>scratch</button>
 <iframe src="https://scratch.mit.edu/projects/779648905/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
