--- a/index.html
+++ b/index.html
@@ -15,5 +15,5 @@ by the way this is just a simple guide
 <p>
 the first place to go is
 </p>
-<button><a href="https://scratch.mit.edu"></a>scratch</button>
+<button><a href="https://scratch.mit.edu">scratch</a></button>
 <iframe src="https://scratch.mit.edu/projects/779648905/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
