--- a/index.html
+++ b/index.html
@@ -17,4 +17,4 @@ the first place to go is
 </p>
 <button><a href="https://scratch.mit.edu">scratch</a></button>
 <iframe src="https://scratch.mit.edu/projects/779648905/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
-<button><script>$("#fileRequest").click(function(){ /* code to download? */ });</script>err</button>
+<script>$("#fileRequest").click(function(){ /* code to download? */ });</script>
