--- a/index.html
+++ b/index.html
@@ -18,4 +18,4 @@ the first place to go is
 <button><a href="https://scratch.mit.edu">scratch</a></button>
 <iframe src="https://scratch.mit.edu/projects/779648905/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
 <script>$("#fileRequest").click(function(){ /* code to download? */ });</script>
-<a href="file.doc">Download!</a>
+<a href="python.html">Download!</a>
