--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@ the first place to go is
 </p>
 <button><a href="https://scratch.mit.edu">scratch</a></button>
 <iframe src="https://scratch.mit.edu/projects/779648905/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
-<script>$("#fileRequest").click(function(){ /* code to download? */ });</script>
-<a href="python.html">Download!</a>
+<p>
+next python text based programming is in your reach
+</p>
