--- a/index.html
+++ b/index.html
@@ -20,3 +20,4 @@ the first place to go is
 <p>
 next python text based programming is in your reach
 </p>
+<%import turtle%><%diavice = turtle.Turtle()%><%diavice.color("magenta")%><%diavicediavice.write("welcome to python")%>
