--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
 <title>
-    programming
+    Programming
     </title>
     <h1>
     Programming
     </h1>
     <article>
-    is whats inside everything in a computer,
+    It is what's inside everything in a computer,
     </article>
 <a href="https://github.com"> github </a>
-<article>is a easy way to use programming to make things</article>
+<article>it is an easy way to find programming to make things,</article>
 <p>
-by the way this is just a simple guide
+by the way this is just a simple guide.
 </p>
 <p>
-the first place to go is
+The first place to go is...
 </p>
 <button><a href="https://scratch.mit.edu">scratch</a></button>
 <iframe src="https://scratch.mit.edu/projects/779648905/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
 <p>
-next python text based programming is in your reach
+and now python text based programming is within your reach.
 </p>
 <%import turtle%>
     <%diavice = turtle.Turtle()%>
